<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_activity_gps">GPS</string>
    <string name="LightActivity">Lights</string>
    <string name="RadioActivity">Radio</string>
    <string name="TempActivity">Temperature</string>
    <string name="search">Search</string>
    <string name="loading">Loading Sreen</string>
    <string name="radio1">Chez</string>
    <string name="radio2">Jump</string>
    <string name="radio3">Kiss</string>
    <string name="radio4">Hot</string>
    <string name="radio5">Bob</string>
    <string name="radio6">Y101</string>
    <string name="mute">Mute</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="off">Off</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_house_activity">HouseActivity</string>
</resources>
