<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sam.finalproject.Radio">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio1"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="106dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio2"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="106dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio3"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="106dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio4"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="179dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio5"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="179dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio6"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Radio Channels"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="60dp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="201dp"
        android:layout_height="37dp"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="282dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Volume"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="74dp"
        android:layout_height="36dp"
        android:text="@string/mute"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="282dp" />

</android.support.constraint.ConstraintLayout>
