<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sam.finalproject.LightsActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="High"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Low"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:text="Light Options"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="37dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="82dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="82dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="82dp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="151dp"
        android:layout_height="35dp"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="184dp" />

</android.support.constraint.ConstraintLayout>
